add vehicle damage
